lib/translator/test/fixtures/ok/raw/loop.prg
PROGRAM loop_sentence
BEGIN
    LOOP
        IF (true) BREAK END
    END
END
