lib/translator/test/fixtures/error/raw/if-scope-missing-var.prg
PROGRAM if_scope_missing_var
BEGIN
    IF (BOOL x)
    ELSE
        x
    END
END
